fix layout when vote buttons are not showing

--- a/src/components/Proposal/ProposalDetails.scss
+++ b/src/components/Proposal/ProposalDetails.scss
@@ -146,6 +146,7 @@ button.disabled {
 .altVoteButtons {
   display: inline-block;
   margin-bottom: 8px;
+  margin-right: 8px;
 }
 
 .voteStatus {
