--- a/src/components/Proposal/Voting/VoteButtons.scss
+++ b/src/components/Proposal/Voting/VoteButtons.scss
@@ -279,7 +279,6 @@ button.disabled {
 }
 
 .detailView .hasVoted .voteRecord {
-  display: inline-block;
   float: right;
   border: none;
   margin-top: 13px;
@@ -288,7 +287,6 @@ button.disabled {
 }
 
 .detailView .proposalInfo .hasVoted .voteRecord {
-  display: inline-block;
   float: left;
   margin-top: 13px;
   font-size: 13px;
